# holochain-scaffolding

./: Cargo.toml  flake.nix
.github/workflows/: build-scaffold-remote-zome.yml  build-scaffold-zome-module.yaml  build-sync-npm-rev-dependencies-with-nix.yml  sync-current-main-with-main.yml  test-app.yaml  test-zome.yaml
crates/holochain_scaffolding_utils/src/: lib.rs
crates/scaffold_remote_zome/src/: lib.rs
crates/scaffold_zome_module/template/: Cargo.toml.hbs  flake.nix.hbs
crates/scaffold_zome_module/template/.github/workflows/: sync-current-main-with-main.yml.hbs  {{#if cachix_cache}}build-and-cache-zomes.yaml{{¡if}}.hbs
crates/sync_npm_rev_dependencies_with_nix/: default.nix
crates/sync_npm_rev_dependencies_with_nix/fixture/: flake.nix
templates/: run_test_app.sh  run_test_zome.sh
templates/app/: dna.instructions.hbs  entry-type.instructions.hbs
templates/app/web-app/: Cargo.toml.hbs  flake.nix.hbs
templates/zome/web-app/: Cargo.toml.hbs  flake.nix.hbs
templates/zome/web-app/.github/workflows/: build-and-cache-zomes.yaml.hbs
