[workspace]
members = ["crates/*"]
exclude = [
  "nix/reference-happ",
  "nix/fixtures/module-repo",
  "nix/fixtures/module-repo/zome",
]
resolver = "2"

[workspace.dependencies]
hdi = "0.7.1-rc"
hdk = "0.6.1-rc"
holochain = "0.6.1-rc"
holo_hash = "0.6.1-rc"
holochain_types = "0.6.1-rc"
mr_bundle = "0.6.1-rc"
